# learn-flash-attn

./: .gitignore  CHANGE_LOG.md  Cargo.toml  README.md  build.rs
src/: attention.rs  lib.rs  softmax.rs
src/attention/: cpu.rs  cuda.rs  kernel.cu  kernel.cuh  kernel.rs  mod.rs  test.rs
src/attention/cuda/: kernel.cu  load.cu
src/cuda/: attention.cuh
