[package]
name = "learn-flash-attn"
version = "0.0.12"
edition = "2024"
authors = [
    "YdrMaster <ydrml@hotmail.com>",
    "pwhMass <a203865235@gmail.com>",
    "onenewcode <lovestudy@qq.com>",
]

[dependencies]
any-tensor = "0.0"
rayon = "1.10"
num-traits = "0.2"
cuda = { git = "https://github.com/YdrMaster/cuda-driver", rev = "c2b12d3" }

[dev-dependencies]
rand = "0.9"

[build-dependencies]
build-script-cfg = "0.1"
find_cuda_helper = "0.2"
