[package]
name = "flash-attn"
version = "0.0.13"
edition = "2024"
authors = [
    "YdrMaster <ydrml@hotmail.com>",
    "pwhMass <a203865235@gmail.com>",
    "onenewcode <lovestudy@qq.com>",
]

[dependencies]
rayon = "1.10"
num-traits = "0.2"
cuda = { git = "https://github.com/YdrMaster/cuda-driver", rev = "31c8090" }

[dev-dependencies]
any-tensor = "0.0"
rand = "0.9"

[build-dependencies]
build-script-cfg = "0.1"
find_cuda_helper = "0.2"
