[package]
name = "flash-attn"
version = "0.0.14"
edition = "2024"
authors = [
    "YdrMaster <ydrml@hotmail.com>",
    "pwhMass <a203865235@gmail.com>",
    "onenewcode <lovestudy@qq.com>",
]

[dependencies]
rayon = "1.10"
num-traits = "0.2"
half = { version = "2.6", features = ["num-traits"] }
cuda = { git = "https://github.com/YdrMaster/cuda-driver", rev = "6a97931" }

[dev-dependencies]
any-tensor = "0.0"
rand = "0.9"

[build-dependencies]
build-script-cfg = "0.1"
find_cuda_helper = "0.2"
search-maca-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "803d64b" }
